Added full solution to every exercise in the tutorial